[metadata]
name = stroop_probing
author = Morris Alper & Michael Fiman
author_email = michaelfiman@mail.tau.ac.il
url = https://github.com/TAU-VAILab/isbertblind
description = This package implements Stroop Probing for text models
version = 0.1.0

[options]
package_dir =
    = probing
packages = find:
python_requires = >=3.9, <4
include_package_data = True

[options.packages.find]
where = probing

